# papersearch-w-mcp

./: .gitignore  README.md  SECURITY.md  chatbox.py  mcp_config.json  pyproject.toml
chatbox/: env.example  pyproject.toml
chatbox/papers/machine_learning/: papers_info.json
doc/2. mcp_cs/: test_server.py
doc/3. further/: further.md
futher/: README.md  main.py  mcp_chatbot.py  pyproject.toml  server_config.json
mcp_project/: client.py  pyproject.toml  research_server.py
mcp_project/papers/math/: papers_info.json
zhihu/: chatbox.md  mcp.md
zhihu/chatbox/: chatbox.md
zhihu/mcp/: mcp.md
