[project]
name = "mcp_demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.2",
    "arxiv>=2.2.0",
    "ipython>=9.3.0",
    "anthropic>=0.52.2",
    "nest-asyncio>=1.6.0",
]

[tool.uv.workspace]
members = [
    "mcp_demo",
    "mcp_project",
]
